add home and random links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,17 @@
         <% } %>
     </div>
 
+    <div id="references">
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/random">Random</a>
+            </li>
+        </ul>
+    </div>
+
     <footer>
         <span>Roald Välja &#169; 2021</span>
     </footer>
