--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,3 +180,23 @@
       color: red;
       text-align: center;
   }
+
+  #references {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+
+  #references a {
+    color: white;
+  }
+
+  #references a:hover {
+    opacity: 0.7;
+  }
+
+  #references ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
