--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,6 +185,11 @@
     position: absolute;
     top: 15px;
     right: 15px;
+    
+    background-color: var(--green-color);
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+    padding: 5px;
   }
 
   #references a {
